--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,38 @@
+@import url('https://fonts.googleapis.com/css?family=Marvel:400,400i,700,700i');
 body{
     padding: 0;
     margin: 0;
     border: none;
+    background-image: url('https://images.pexels.com/photos/933155/pexels-photo-933155.jpeg?cs=srgb&dl=close-up-desk-device-933155.jpg&fm=jpg');
+    background-size: cover;
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    font-family: 'Marvel',serif;
 }
 .text-center{
     text-align: center;
+    background-color: rgba(255,255,255,0.5);
+    color: #000;
+    padding: 2% 0;
+
 }
-#messages{
-    background-color: #fafafa;
-    color: #333;
+
+.text-center h1{
+    font-weight: bold;
+}
+#display{
+    /* background-color: #fafafa; */
+    color: #fafafa;
+}
+.about{
+    background-color: rgba(255,255,255,0.5);
+    border: 1px solid #000;
+}
+.right{
+    background-color: rgb(99, 3, 155);
+    color: #fff;
+}
+
+.row{
+    height: 100vh;
 }
